# dj-pr1

./: README.md  pyproject.toml  readme.md
src/project/: settings.py  urls.py
src/words/: services.py  urls.py  views.py
src/words/templates/words/: add_word.html  hello.html  words_list.html
