[tool.poetry]
name = "dj-pr1"
version = "0.1.0"
description = ""
authors = ["Mikhail Postnikov <postnikovmu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "              5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
